--- a/actividades/1_autoencoder_mnist.ipynb
+++ b/actividades/1_autoencoder_mnist.ipynb
@@ -63,11 +63,11 @@
     "\n",
     "# Data loader de entrenamiento\n",
     "train_dataset = Subset(mnist_train_data, train_idx)\n",
-    "train_loader = DataLoader(train_dataset, shuffle=True, batch_size=32)\n",
+    "train_loader = DataLoader(train_dataset, shuffle=True, batch_size=32, num_workers=4, pin_memory=True)\n",
     "\n",
     "# Data loader de validación\n",
     "valid_dataset = Subset(mnist_train_data, valid_idx)\n",
-    "valid_loader = DataLoader(valid_dataset, shuffle=False, batch_size=256)"
+    "valid_loader = DataLoader(valid_dataset, shuffle=False, batch_size=256, num_workers=4)"
    ]
   },
   {
@@ -147,10 +147,12 @@
     "torch.manual_seed(1234) # Por reproducibilidad\n",
     "max_epochs = 100  \n",
     "model = Autoencoder()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-2)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
     "criterion = torch.nn.BCEWithLogitsLoss(reduction='mean')\n",
-    "device = torch.device('cpu')\n",
-    "#device = torch.device('cuda:0')\n",
+    "#device = torch.device('cpu')\n",
+    "device = torch.device('cuda:0')\n",
+    "\n",
+    "model = model.to(device)\n",
     "\n",
     "def train_one_step(engine, batch): \n",
     "    model.train()\n",
@@ -206,7 +208,8 @@
     "        writer.add_scalar(\"valid/loss\", evaluator.state.metrics['Loss'], engine.state.epoch)\n",
     "        \n",
     "        print(f\"Epoca: {engine.state.epoch} Valid loss: {evaluator.state.metrics['Loss']:.4f}\")\n",
-    "\n",
+    "        print(f\"Tiempo: {engine.state.times['EPOCH_COMPLETED']:0.4f} [s]\")\n",
+    "        \n",
     "    best_model_handler = ModelCheckpoint(dirname='.', require_empty=False, filename_prefix=\"best\", n_saved=1,\n",
     "                                         score_function=lambda engine: -engine.state.metrics['Loss'],\n",
     "                                         score_name=\"val_loss\")\n",
@@ -332,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
