--- a/actividades/1_autoencoder_mnist.ipynb
+++ b/actividades/1_autoencoder_mnist.ipynb
@@ -135,7 +135,7 @@
     "\n",
     "No olvides lanzar el dashboard\n",
     "\n",
-    "    tensorboard --logdit /tmp/tensorboard"
+    "    tensorboard --logdir /tmp/tensorboard"
    ]
   },
   {
@@ -335,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
