--- a/actividades/1_autoencoder_mnist.ipynb
+++ b/actividades/1_autoencoder_mnist.ipynb
@@ -67,7 +67,9 @@
     "\n",
     "# Data loader de validación\n",
     "valid_dataset = Subset(mnist_train_data, valid_idx)\n",
-    "valid_loader = DataLoader(valid_dataset, shuffle=False, batch_size=256, num_workers=4)"
+    "valid_loader = DataLoader(valid_dataset, shuffle=False, batch_size=256, num_workers=4)\n",
+    "\n",
+    "test_loader = DataLoader(mnist_test_data, shuffle=False, batch_size=256)"
    ]
   },
   {
@@ -321,9 +323,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python3 (pyro)",
    "language": "python",
-   "name": "python3"
+   "name": "pyro-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -335,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
